whatsapp alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -197,7 +197,7 @@ html {
 }
 @media (max-width: 768px ) and (max-width: 912px ) {
   .WhatsApp > img {
-    bottom: 35px !important;
+    bottom: 30px !important;
     right: 35px;
     width: 60px;
     height: 60px;
